# persona-agent

./: README.md  pyproject.toml  pytest.ini
examples/: basic_usage.py  litellm_example.py
src/persona_agent/: __init__.py  core.py  models.py
tests/: __init__.py  main.py.tmp  test_core.py
